test run good i think

--- a/index.html
+++ b/index.html
@@ -10,27 +10,31 @@
 <body>
     <header>
         <h1 id='name-header'>Weyes Blood</h1>
-        <h3 id='insert-name'>(Your name here) listened to her a whole lot this year!</h3>
+        <h3 id='insert-name'>I listened to her a whole lot this year!</h3>
     </header>
-    <div id='song-info'>
-        <div id='album-art'>
-            <img src="https://imagescdn.junodownload.com/full/CS4103702-02A-BIG.jpg">
+    <div id='container'>
+        <div id='song-info'>
+            <div id='album-art'>
+                <div id='album-title'>Titanic Rising</div>
+                <img src="https://imagescdn.junodownload.com/full/CS4103702-02A-BIG.jpg">
+            </div>
+            <div id='song-list'>
+                <div class='song'>A Lot's Gonna Change</div>
+                <div class="song">Andromeda</div>
+                <div class="song">Everyday</div>
+                <div class="song">Something to Believe</div>
+                <div class="song">Titanic Rising</div>
+                <div class="song">Movies</div>
+                <div class="song">Mirror Forever</div>
+                <div class="song">Wild Time</div>
+                <div class="song">Picture Me Better</div>
+                <div class="song">Nearer to Thee</div>
+            </div>
         </div>
-        <div id='song-list'>
-            <div class='song'>A Lot's Gonna Change</div>
-            <div class="song">Andromeda</div>
-            <div class="song">Everyday</div>
-            <div class="song">Something to Believe</div>
-            <div class="song">Titanic Rising</div>
-            <div class="song">Movies</div>
-            <div class="song">Mirror Forever</div>
-            <div class="song">Wild Time</div>
-            <div class="song">Picture Me Better</div>
-            <div class="song">Nearer to Thee</div>
-        </div>
-    </div>
-    <div id='clicked-song'>
-        Click a song to put it over here
+        <div id='clicked-container'>
+            <div id="clicked-song">Click to add song!</div>
+            <!-- <iframe id="spotify" src="https://open.spotify.com/embed/album/0Cuqhgy8vm96JEkBY3polk" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe> -->
+        </div> 
     </div>
 </body>
 </html>
